--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -1,144 +1,38 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{078CB2B5-BF6C-497A-8A0E-2633367E4759}</ProjectGuid>
+    <TargetFramework>net472</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Eutherion.Win</RootNamespace>
-    <AssemblyName>Eutherion.Win</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <OutputPath>$(SolutionDir)Bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>$(SolutionDir)Bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutoSaveTextFile.cs" />
-    <Compile Include="Controls\GlyphTabControl.cs">
+    <Compile Update="Controls\GlyphTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\GlyphTabControl.Drawing.cs">
+    <Compile Update="Controls\GlyphTabControl.Drawing.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\GlyphTabControl.TabPage.cs">
+    <Compile Update="Controls\GlyphTabControl.TabPage.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\GlyphTabControl.TabPageCollection.cs">
+    <Compile Update="Controls\GlyphTabControl.TabPageCollection.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\NonSelectableButton.cs">
+    <Compile Update="Controls\NonSelectableButton.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\UpdatableRichTextBox.cs">
+    <Compile Update="Controls\UpdatableRichTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="DragDrop\CursorFromHandle.cs" />
-    <Compile Include="DragDrop\DragUtilities.cs" />
-    <Compile Include="FileStreamPair.cs" />
-    <Compile Include="FileWatcher.cs" />
-    <Compile Include="FocusHelper.cs" />
-    <Compile Include="FormExtensions.cs" />
-    <Compile Include="Forms\ConstrainedMoveResizeForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\MdiChildSnapHelper.cs" />
-    <Compile Include="Forms\MoveResizeEventArgs.cs" />
-    <Compile Include="Forms\OwnedFormSnapHelper.cs" />
-    <Compile Include="Forms\SnapGrid.cs" />
-    <Compile Include="Forms\SnapHelper.cs" />
-    <Compile Include="LineSegment.cs" />
-    <Compile Include="LiveTextFile.cs" />
-    <Compile Include="Native\Constants.cs" />
-    <Compile Include="Native\NativeMethods.cs" />
-    <Compile Include="Native\ResizeMode.cs" />
-    <Compile Include="Native\Structures.cs" />
-    <Compile Include="Native\WindowCommand.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\CompactSettingWriter.cs" />
-    <Compile Include="Storage\FileNameType.cs" />
-    <Compile Include="Storage\ITypeErrorBuilder.cs" />
-    <Compile Include="Storage\OpaqueColorType.cs" />
-    <Compile Include="Storage\PersistableFormState.cs" />
-    <Compile Include="Storage\PList.cs" />
-    <Compile Include="Storage\PMap.cs" />
-    <Compile Include="Storage\PType.Base.cs" />
-    <Compile Include="Storage\PType.Common.cs" />
-    <Compile Include="Storage\PType.cs" />
-    <Compile Include="Storage\PType.List.cs" />
-    <Compile Include="Storage\PType.Map.cs" />
-    <Compile Include="Storage\PType.Tuple.cs" />
-    <Compile Include="Storage\PType.Tuple.Generate.cs" />
-    <Compile Include="Storage\PTypeError.cs" />
-    <Compile Include="Storage\PTypeErrorBuilder.cs" />
-    <Compile Include="Storage\PValue.cs" />
-    <Compile Include="Storage\SettingComment.cs" />
-    <Compile Include="Storage\SettingCopy.cs" />
-    <Compile Include="Storage\SettingKey.cs" />
-    <Compile Include="Storage\SettingObject.cs" />
-    <Compile Include="Storage\SettingProperty.cs" />
-    <Compile Include="Storage\SettingsAutoSave.cs" />
-    <Compile Include="Storage\SettingSchema.cs" />
-    <Compile Include="Storage\SettingsFile.cs" />
-    <Compile Include="Storage\SettingSyntaxTree.cs" />
-    <Compile Include="Storage\SettingWriter.cs" />
-    <Compile Include="Storage\SubFolderNameType.cs" />
-    <Compile Include="UIActions\UIActionBindings.cs" />
-    <Compile Include="UIActions\UIActionHandlerProviderExtensions.cs" />
-    <Compile Include="UIActions\UIActionInterfaces.cs" />
-    <Compile Include="UIActions\UIActionUtilities.cs" />
-    <Compile Include="UIActions\UIAutoHideMainMenu.cs" />
-    <Compile Include="UIActions\UIMenu.cs" />
-    <Compile Include="Utils\FileUtilities.cs" />
-    <Compile Include="Utils\FormatUtilities.cs" />
-    <Compile Include="Utils\JsonErrorInfoParameterDisplayHelper.cs" />
-    <Compile Include="Utils\KeyUtilities.cs" />
-    <Compile Include="Utils\RegistryHelper.cs" />
-    <Compile Include="Utils\ShortcutKeys.cs" />
-    <Compile Include="Utils\ThemeHelper.cs" />
-    <Compile Include="WeakEvent\HandlerIsAnonymousException.cs" />
-    <Compile Include="WeakEvent\WeakEvent.cs" />
-    <Compile Include="WorkingCopyTextFile.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Eutherion.Common">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Eutherion.Text.Json">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Eutherion.UIActions">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Eutherion.Utilities">
-      <Version>1.5.1</Version>
-    </PackageReference>
+    <PackageReference Include="Eutherion.Common" Version="1.5.1" />
+    <PackageReference Include="Eutherion.Text.Json" Version="1.5.1" />
+    <PackageReference Include="Eutherion.UIActions" Version="1.5.1" />
+    <PackageReference Include="Eutherion.Utilities" Version="1.5.1" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
