--- a/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
+++ b/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
@@ -1,150 +1,39 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{72A45CF1-2C79-4F11-9F22-ED5508C5E97A}</ProjectGuid>
+    <TargetFramework>net472</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Eutherion.Win.MdiAppTemplate</RootNamespace>
-    <AssemblyName>Eutherion.Win.MdiAppTemplate</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <OutputPath>$(SolutionDir)Bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>$(SolutionDir)Bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutoSaveFileNamePair.cs" />
-    <Compile Include="BuiltInEnglishLocalizer.cs" />
-    <Compile Include="CombinedUIActionInterface.cs" />
-    <Compile Include="DockableControlHelpers.cs" />
-    <Compile Include="ErrorLevel.cs" />
-    <Compile Include="FileLocalizer.cs" />
-    <Compile Include="IDockableControl.cs" />
-    <Compile Include="JsonErrorInfoExtensions.cs" />
-    <Compile Include="JsonStyleSelector.cs" />
-    <Compile Include="JsonSyntaxDescriptor.cs" />
-    <Compile Include="ListBoxEx.cs">
+    <Compile Update="ListBoxEx.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="LocalizedConsoleKeys.cs" />
-    <Compile Include="LocalizedString.cs" />
-    <Compile Include="LocalizedTextProvider.cs" />
-    <Compile Include="Localizers.cs" />
-    <Compile Include="MdiTabControl.cs">
+    <Compile Update="MdiTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="MenuCaptionBarForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MenuCaptionBarFormStyle.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RichTextBoxEx.cs">
+    <Compile Update="RichTextBoxEx.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ScintillaEx.cs">
+    <Compile Update="ScintillaEx.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Session.cs" />
-    <Compile Include="Session.ToolForms.cs" />
-    <Compile Include="SettingSyntaxDescriptor.cs" />
-    <Compile Include="SharedLocalizedStringKeys.cs" />
-    <Compile Include="SharedResources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SharedResources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="SharedSettings.cs" />
-    <Compile Include="SharedUIAction.cs" />
-    <Compile Include="SingleInstanceMainForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SyntaxEditor.cs">
+    <Compile Update="SyntaxEditor.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="UIActionForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WorkingCopyTextFileAutoSaver.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Win\Eutherion.Win.csproj">
-      <Project>{77da1d85-0062-4caa-af31-49d9a0b16bb2}</Project>
-      <Name>Eutherion.Win</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\Win\Eutherion.Win.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="close.png" />
-    <None Include="close_white.png" />
-    <None Include="copy.png" />
-    <None Include="cut.png" />
-    <None Include="demaximize.png" />
-    <None Include="demaximize_white.png" />
-    <None Include="globe.png" />
-    <None Include="maximize.png" />
-    <None Include="maximize_white.png" />
-    <None Include="minimize.png" />
-    <None Include="minimize_white.png" />
-    <None Include="paste.png" />
-    <None Include="redo.png" />
-    <None Include="save.png" />
-    <None Include="save_white.png" />
-    <None Include="settings.png" />
-    <None Include="speech.png" />
-    <None Include="undo.png" />
-    <None Include="zoom_in.png" />
-    <None Include="zoom_out.png" />
+    <PackageReference Include="Eutherion.Common" Version="1.5.1" />
+    <PackageReference Include="Eutherion.Text.Json" Version="1.5.1" />
+    <PackageReference Include="Eutherion.UIActions" Version="1.5.1" />
+    <PackageReference Include="Eutherion.Utilities" Version="1.5.1" />
+    <PackageReference Include="jacobslusser.ScintillaNET" Version="3.6.3" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="SharedResources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>SharedResources.Designer.cs</LastGenOutput>
-      <CustomToolNamespace>Eutherion.Win.MdiAppTemplate</CustomToolNamespace>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Eutherion.Common">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Eutherion.Text.Json">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Eutherion.UIActions">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Eutherion.Utilities">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="jacobslusser.ScintillaNET">
-      <Version>3.6.3</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
